# ChainSensors-V1

./: .gitignore  QC_REPORT.md  README.md  REWARD_INTEGRATION.md  SENSOR_BALANCE_GUIDE.md  optimize-logo.sh  package-lock.json  package.json  pnpm-workspace.yaml  quick-fix.sh  vercel.json
ChainSensorsContracts/: Anchor.toml
backend/: .gitignore  broker-cert.pem  broker-key.pem  broker-san.cnf  broker.csr  ca-cert copy.srl  ca-cert.srl  ca-key.pem  check-mxe.js  clean-purchases.js  expire-listings-simple.js  expire-listings.js  get-mxe-pubkey.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
backend/mqtt/: mqtt.module.ts  (+1 more)
chain-sensors-contracts/: Anchor.toml
chain_sensors/: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  package-lock.json  package.json
chain_sensors/programs/chain_sensors/: Cargo.toml
chain_sensors/programs/chain_sensors/src/: lib.rs  mod.rs
chain_sensors/programs/chain_sensors/src/instructions/: cancel_device.rs  cancel_listing.rs  compute_accuracy.rs  create_listing.rs  device_registry.rs  finalize_purchase.rs  initialize.rs  mod.rs  purchase_listing.rs  quality.rs  reseal_dek.rs  update_marketplace.rs
chain_sensors/programs/chain_sensors/src/state/: device_registry.rs  dq.rs  job.rs  listing.rs  marketplace.rs  mod.rs  purchase_record.rs
chainsensors-sim/: .gitignore  arcium-enhanced-data.js  ca-cert.pem  data.js  mercedes-benz-001-cert.pem  mercedes-benz-001-key.pem  mercedes-benz-001.csr.pem  new-tesla-3-cert.pem  new-tesla-3-key.pem  new-tesla-3.csr.pem  reda-air-001-cert.pem  reda-air-001-key.pem  reda-air-001.csr.pem
frontend/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
(+188 files in other folders)
