[package]
name = "chain_sensors"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chain_sensors"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
arcium-anchor = "0.2.0"
arcium-macros = "0.2.0"
#arcium-client = { version = "0.2", default-features = false, features = ["anchor-client"] }
uuid          = { version = "1.8", default-features = false, features = ["v5"] }
arcium-client = { default-features = false, version = "0.2.0" }
